# tg-publisher-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_hashtag_categories.py
src/: __main__.py  config.py
src/ai/: base.py  composer.py  factory.py  hashtag_generator.py  hashtag_matcher.py  summarizer.py
src/ai/providers/: _openai_compatible.py  chatgpt.py  claude.py  deepseek.py  gemini.py  groq.py
src/bot/: keyboards.py  main.py  states.py
src/bot/handlers/: edit_post.py  errors.py  hashtag_mgmt.py  hashtags.py  roles.py  settings.py  url_input.py
src/bot/middlewares/: auth.py
src/db/: models.py  repository.py  session.py
src/extractors/: __init__.py  article.py  audio.py  base.py  detector.py  github.py  youtube.py
src/publisher/: channel.py
src/services/: hashtags.py  pipeline.py  users.py
tests/: conftest.py
tests/integration/: conftest.py  test_repository.py
tests/unit/: test_detector.py  test_extractors.py  test_hashtag_categories.py  test_hashtag_validation.py  test_pipeline.py  test_summarizer.py
